# rust-mono

./: .gitignore  Cargo.toml  README.md
apps/dynamic-app/: Cargo.toml
apps/dynamic-app/src/: main.rs
apps/static-app/: Cargo.toml
apps/static-app/src/: main.rs
md/: AI-创建.md  构建测试总结.md  项目结构说明.md
scripts/: build.sh
