[workspace]
resolver = "2"
members = [
    "packages/common",
    "packages/mathlib",
    "packages/stringlib",
    "apps/static-app",
    "apps/dynamic-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rust Mono Project"]
license = "MIT"

[workspace.dependencies]
chrono = "0.4"
libc = "0.2"
libloading = "0.8"
